tests/compile_only/gen_into/into_no_prefix.fail.stderr
error: unexpected end of macro invocation
 --> tests/compile_only/gen_into/into_no_prefix.fail.rs:7:5
  |
1 | #[clappen::clappen(export = generate, gen_into)]
  | ------------------------------------------------ when calling this macro
...
7 |     generate!();
  |     ^^^^^^^^^^^ missing tokens in macro arguments
  |
note: while trying to match meta-variable `$prefix:literal`
 --> tests/compile_only/gen_into/into_no_prefix.fail.rs:1:1
  |
1 | #[clappen::clappen(export = generate, gen_into)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: this error originates in the attribute macro `clappen::clappen` (in Nightly builds, run with -Z macro-backtrace for more info)
